feat: :lipstick: Left nav done

--- a/index.html
+++ b/index.html
@@ -17,134 +17,134 @@
             <div class="description__item">
                 <div class="description__container">
                     <div>
-                        <img src="http://www.example.com">
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
                     </div>
                     <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <img src="http://www.example.com">
-                    </div>
-                    <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
+                        <h3>ALL SYSTEMS CHECK</h3>
+                        <small>Normal</small>
                     </div>
                 </div>
                 <div class="description__container">
                     <div>
-                        <img src="http://www.example.com">
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
                     </div>
                     <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <img src="http://www.example.com">
-                    </div>
-                    <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
+                        <h3>RENDEZVOUS BURN SLOW</h3>
+                        <small>Normal</small>
                     </div>
                 </div>
                 <div class="description__container">
                     <div>
-                        <img src="http://www.example.com">
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
                     </div>
                     <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <img src="http://www.example.com">
-                    </div>
-                    <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
+                        <h3>PREPARE RENDEZVOUS BURN</h3>
+                        <small>Normal</small>
                     </div>
                 </div>
                 <div class="description__container">
                     <div>
-                        <img src="http://www.example.com">
+                        <i class='bx bxs-check-circle' style='color:#40c110'  ></i>
                     </div>
                     <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <img src="http://www.example.com">
-                    </div>
-                    <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
+                        <h3>THERMAL SHIELD</h3>
+                        <small style="color: white;">Applied</small>
                     </div>
                 </div>
                 <div class="description__container">
                     <div>
-                        <img src="http://www.example.com">
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
                     </div>
                     <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <img src="http://www.example.com">
-                    </div>
-                    <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
+                        <h3>BURN GO/NO-GO</h3>
+                        <small>Normal</small>
                     </div>
                 </div>
                 <div class="description__container">
                     <div>
-                        <img src="http://www.example.com">
+                        <i class='bx bxs-check-circle' style='color:#ea7b15'  ></i>
                     </div>
                     <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <img src="http://www.example.com">
-                    </div>
-                    <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
+                        <h3>POWER COMPLETION</h3>
+                        <small style="color: white;">Awaiting</small>
                     </div>
                 </div>
                 <div class="description__container">
                     <div>
-                        <img src="http://www.example.com">
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
                     </div>
                     <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
+                        <h3>STATION DECK CHECK</h3>
+                        <small>Normal</small>
                     </div>
                 </div>
                 <div class="description__container">
                     <div>
-                        <img src="http://www.example.com">
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
                     </div>
                     <div>
-                        <h3>Title</h3>
-                        <small>Lorem ipsum dolor sit amet...</small>
+                        <h3>UNKNOWN</h3>
+                        <small>Normal</small>
+                    </div>
+                </div>
+                <div class="description__container">
+                    <div>
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
+                    </div>
+                    <div>
+                        <h3>UNKNOWN</h3>
+                        <small>Normal</small>
+                    </div>
+                </div>
+                <div class="description__container">
+                    <div>
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
+                    </div>
+                    <div>
+                        <h3>UNKNOWN</h3>
+                        <small>Normal</small>
+                    </div>
+                </div>
+                <div class="description__container">
+                    <div>
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
+                    </div>
+                    <div>
+                        <h3>UNKNOWN</h3>
+                        <small>Normal</small>
+                    </div>
+                </div>
+                <div class="description__container">
+                    <div>
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
+                    </div>
+                    <div>
+                        <h3>UNKNOWN</h3>
+                        <small>Normal</small>
+                    </div>
+                </div>
+                <div class="description__container">
+                    <div>
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
+                    </div>
+                    <div>
+                        <h3>UNKNOWN</h3>
+                        <small>Normal</small>
+                    </div>
+                </div>
+                <div class="description__container">
+                    <div>
+                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
+                    </div>
+                    <div>
+                        <h3>UNKNOWN</h3>
+                        <small>Normal</small>
                     </div>
                 </div>
             </div>
             <div class="description__buttom">
-                <a href="#">a</a>
-                <a href="#">b</a>
+                <a href="#">SYSTEMS</a>
+                <a href="#">CABIN</a>
             </div>
         </nav>
         <section class="main__section">
@@ -221,128 +221,63 @@
             <div class="information__item">
                 <div class="information__container">
                     <div>
-                        <label for="file">File progress:</label>
+                        <label for="file">Inertial Velocity</label>
                         <progress id="file" max="100" value="70">70%</progress>
                     </div>
                     <div>
-                        <span>Lorem ipsum..</span>
+                        <span>7.68 km/s</span>
                     </div>
                 </div>
                 <div class="information__container">
                     <div>
-                        <label for="file">File progress:</label>
+                        <label for="file">Altitude</label>
                         <progress id="file" max="100" value="70">70%</progress>
                     </div>
                     <div>
-                        <span>Lorem ipsum..</span>
+                        <span>390.0 km</span>
                     </div>
                 </div>
                 <div class="information__container">
                     <div>
-                        <label for="file">File progress:</label>
+                        <label for="file">Apogee</label>
                         <progress id="file" max="100" value="70">70%</progress>
                     </div>
                     <div>
-                        <span>Lorem ipsum..</span>
+                        <span>404.4 km</span>
                     </div>
                 </div>
                 <div class="information__container">
                     <div>
-                        <label for="file">File progress:</label>
+                        <label for="file">Perigee</label>
                         <progress id="file" max="100" value="70">70%</progress>
                     </div>
                     <div>
-                        <span>Lorem ipsum..</span>
+                        <span>389.4 km</span>
                     </div>
                 </div>
                 <div class="information__container">
                     <div>
-                        <label for="file">File progress:</label>
+                        <label for="file">Inclination</label>
                         <progress id="file" max="100" value="70">70%</progress>
                     </div>
                     <div>
-                        <span>Lorem ipsum..</span>
+                        <span>51.67°</span>
                     </div>
                 </div>
                 <div class="information__container">
                     <div>
-                        <label for="file">File progress:</label>
+                        <label for="file">Range to ISS</label>
                         <progress id="file" max="100" value="70">70%</progress>
                     </div>
                     <div>
-                        <span>Lorem ipsum..</span>
+                        <span>0.02 km</span>
                     </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">File progress:</label>
-                        <progress id="file" max="100" value="70">70%</progress>
-                    </div>
-                    <div>
-                        <span>Lorem ipsum..</span>
-                    </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">File progress:</label>
-                        <progress id="file" max="100" value="70">70%</progress>
-                    </div>
-                    <div>
-                        <span>Lorem ipsum..</span>
-                    </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">File progress:</label>
-                        <progress id="file" max="100" value="70">70%</progress>
-                    </div>
-                    <div>
-                        <span>Lorem ipsum..</span>
-                    </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">File progress:</label>
-                        <progress id="file" max="100" value="70">70%</progress>
-                    </div>
-                    <div>
-                        <span>Lorem ipsum..</span>
-                    </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">File progress:</label>
-                        <progress id="file" max="100" value="70">70%</progress>
-                    </div>
-                    <div>
-                        <span>Lorem ipsum..</span>
-                    </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">File progress:</label>
-                        <progress id="file" max="100" value="70">70%</progress>
-                    </div>
-                    <div>
-                        <span>Lorem ipsum..</span>
-                    </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">File progress:</label>
-                        <progress id="file" max="100" value="70">70%</progress>
-                    </div>
-                    <div>
-                        <span>Lorem ipsum..</span>
-                    </div>
-                </div>
             </div>
             <div class="information__buttom">
                 <a href="#">a</a>
                 <a href="#">b</a>
             </div>
         </nav>
-    </main>
-    
+    </main> 
 </body>
 </html>
