feat: :construction: Close to end the right nav

--- a/index.html
+++ b/index.html
@@ -219,63 +219,68 @@
         </section>
         <nav class="nav__information">
             <div class="information__item">
-                <div class="information__container">
-                    <div>
-                        <label for="file">Inertial Velocity</label>
-                        <progress id="file" max="100" value="70">70%</progress>
+                <div class="container">
+                    <div class="information__container">
+                        <div>
+                            <label for="file">Inertial Velocity</label>
+                            <progress id="file" max="100" value="70">70%</progress>
+                        </div>
+                        <div>
+                            <span>7.68 km/s</span>
+                        </div>
                     </div>
-                    <div>
-                        <span>7.68 km/s</span>
+                    <div class="information__container">
+                        <div>
+                            <label for="file">Altitude</label>
+                            <progress id="file" max="100" value="70">70%</progress>
+                        </div>
+                        <div>
+                            <span>390.0 km</span>
+                        </div>
                     </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">Altitude</label>
-                        <progress id="file" max="100" value="70">70%</progress>
+                    <div class="information__container">
+                        <div>
+                            <label for="file">Apogee</label>
+                            <progress id="file" max="100" value="70">70%</progress>
+                        </div>
+                        <div>
+                            <span>404.4 km</span>
+                        </div>
                     </div>
-                    <div>
-                        <span>390.0 km</span>
-                    </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">Apogee</label>
-                        <progress id="file" max="100" value="70">70%</progress>
-                    </div>
-                    <div>
-                        <span>404.4 km</span>
-                    </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">Perigee</label>
-                        <progress id="file" max="100" value="70">70%</progress>
-                    </div>
-                    <div>
-                        <span>389.4 km</span>
-                    </div>
-                </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">Inclination</label>
-                        <progress id="file" max="100" value="70">70%</progress>
-                    </div>
-                    <div>
-                        <span>51.67°</span>
+                    <div class="information__container">
+                        <div>
+                            <label for="file">Perigee</label>
+                            <progress id="file" max="100" value="70">70%</progress>
+                        </div>
+                        <div>
+                            <span>389.4 km</span>
+                        </div>
                     </div>
                 </div>
-                <div class="information__container">
-                    <div>
-                        <label for="file">Range to ISS</label>
-                        <progress id="file" max="100" value="70">70%</progress>
+                <div class="container">
+                    <div class="information__container">
+                        <div>
+                            <label for="file">Inclination</label>
+                            <progress id="file" max="100" value="70">70%</progress>
+                        </div>
+                        <div>
+                            <span>51.67°</span>
+                        </div>
                     </div>
-                    <div>
-                        <span>0.02 km</span>
+                    <div class="information__container">
+                        <div>
+                            <label for="file">Range to ISS</label>
+                            <progress id="file" max="100" value="70">70%</progress>
+                        </div>
+                        <div>
+                            <span>0.02 km</span>
+                        </div>
                     </div>
-            </div>
+                </div>
             <div class="information__buttom">
                 <a href="#">a</a>
                 <a href="#">b</a>
+            </div>
             </div>
         </nav>
     </main> 
