--- a/index.html
+++ b/index.html
@@ -256,8 +256,7 @@
                             <span>389.4 km</span>
                         </div>
                     </div>
-                </div>
-                <div class="container">
+
                     <div class="information__container">
                         <div>
                             <label for="file">Inclination</label>
@@ -278,8 +277,8 @@
                     </div>
                 </div>
             <div class="information__buttom">
-                <a href="#">a</a>
-                <a href="#">b</a>
+                <a href="#" class="gray__words">Power, Engine, Comms</a>
+                <a href="#" class="a__button">MORE</a>
             </div>
             </div>
         </nav>
