refactor: :recycle: Refactoring the main

--- a/index.html
+++ b/index.html
@@ -153,65 +153,60 @@
             <article class="section__item__3">Caja 3</article>
             <article class="section__item__4">Caja 4</article>
             <article class="section__item__5">Caja 5</article>
-            <article class="section__item__6">Caja 6</article>
-            <article class="section__item__7">Caja 7</article>
-            <article class="section__item__8">Caja 8</article>
-            <article class="section__item__9">Caja 9</article>
-            <article class="section__item__10">Caja 10</article>
             <footer class="footer">
                 <ul>
                     <li>
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <img src="storage/img/icons/iconos/rocket.svg">
+                            <span>Overview</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <i class='bx bx-body' style='color:#e72d2d'></i>
+                            <span>Life</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <img src="storage/img/icons/iconos/comms.svg">
+                            <span>Comms</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <img src="storage/img/icons/iconos/prop.svg">
+                            <span>Prop</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <img src="storage/img/icons/iconos/mech.svg">
+                            <span>Mech</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <i class='bx bxs-battery-charging bx-rotate-270' style='color:#ffffff'  ></i>
+                            <span>Power</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <i class='bx bxs-chip' style='color:#ffffff'  ></i>
+                            <span>Avionics</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <i class='bx bx-current-location bx-rotate-270' style='color:#ffffff'  ></i>
+                            <span>GNC</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <i class='bx bxs-brightness-half' style="color: #fff"></i>
+                            <span>Thermal</span>
                         </a>
                     </li>
                 </ul>
