feat: :construction_worker: Doing the main section

--- a/index.html
+++ b/index.html
@@ -148,10 +148,23 @@
             </div>
         </nav>
         <section class="main__section">
-            <article class="section__item__1">Caja 1</article>
-            <article class="section__item__2">Caja 2</article>
+            <article class="section__item__1">
+                <div class="box_1"></div>
+                <div class="box_1"></div>
+                <div class="box_1"></div>
+                <div class="box_1"></div>
+                <div class="box_1"></div>
+                <div class="box_1"></div>
+            </article>
+            <article class="section__item__2">
+                <div class="box_2"></div>
+                <div class="box_2"></div>
+            </article>
             <article class="section__item__3">Caja 3</article>
-            <article class="section__item__4">Caja 4</article>
+            <article class="section__item__4">
+                <div class="box_4"></div>
+                <div class="box_4"></div>
+            </article>
             <article class="section__item__5">Caja 5</article>
             <footer class="footer">
                 <ul>
