feat: :rocket: Frontend done

--- a/index.html
+++ b/index.html
@@ -160,12 +160,35 @@
                 <div class="box_2"></div>
                 <div class="box_2"></div>
             </article>
-            <article class="section__item__3">Caja 3</article>
+            <article class="section__item__3">
+                <img src="storage/img/EYMFT_GWoAUjZVf-removebg.png" alt="">
+            </article>
             <article class="section__item__4">
                 <div class="box_4"></div>
                 <div class="box_4"></div>
             </article>
-            <article class="section__item__5">Caja 5</article>
+            <article class="section__item__5">
+                <h3>Connections</h3>
+                <div class="line"></div>
+                <div class="subcontainer">
+                    <div>
+                        <p>Manual Rigs</p>
+                        <p><strong>Connected</strong></p>
+                    </div>
+                    <div>
+                        <p>Changelog</p>
+                        <p><strong>Connected</strong></p>
+                    </div>
+                    <div>
+                        <p>Airlock</p>
+                        <p><strong>Connected</strong></p>
+                    </div>
+                    <div>
+                        <p>Wing</p>
+                        <p><strong>Connected</strong></p>
+                    </div>
+                </div>
+            </article>
             <footer class="footer">
                 <ul>
                     <li>
